kuber-homeworks_1_5/yaml/homehork_5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app 
  labels:
    app: frontend
spec:
  replicas: 3 # Изенить для увеличения кол-во реплик pod's
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels:
    app: backend
spec:
  replicas: 1 # Изенить для увеличения кол-во реплик pod's
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
---
apiVersion: v1

kind: Service

metadata:
  name: frontend-svc
spec:
  selector:
    app: frontend 

  ports:
    - name: nginx
      port: 80
      protocol: TCP
---
apiVersion: v1

kind: Service

metadata:
  name: backend-svc
spec:
  selector:
    app: backend

  ports:
    - name: multitool
      port: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: test-ingress
spec:
  rules:
    - host: netology.mali.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  name: nginx
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  name: multitool
---
